[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-probe"
version = "0.1.1"
description = "Research anything, deeply, in one line of code. A Python library wrapping Google Gemini Deep Research API."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "liukaining" }
]
maintainers = [
    { name = "liukaining" }
]
keywords = ["gemini", "deep-research", "ai", "research", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/liu-kaining/DeepProbe"
Documentation = "https://github.com/liu-kaining/DeepProbe#readme"
Repository = "https://github.com/liu-kaining/DeepProbe"
Issues = "https://github.com/liu-kaining/DeepProbe/issues"
"Bug Tracker" = "https://github.com/liu-kaining/DeepProbe/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deep-probe = "deep_probe.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_probe"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]